--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <¡-- esto es un comenterio -->
         <meta charset="utf-8">
         <title>AirBnB clone</title>
         <link rel="stylesheet" type="text/css" href="styles/2-common.css" />
